sumo/tests/netconvert/errors/no_output/options.netconvert
--xml-edge-files=%SUMO_DIST%\tests\netconvert\errors\no_output\hokkaido.edg.xml --xml-node-files=%SUMO_DIST%\tests\netconvert\errors\no_output\hokkaido.nod.xml
